# mpc-qt

./: .gitignore  CMakeLists.txt  io.github.mpc_qt.mpc-qt.appdata.xml  main.cpp  mainwindow.cpp  mainwindow.ui  make-release-msys2.sh  manager.cpp  mpc-qt.pro  mpvwidget.cpp  propertieswindow.cpp  propertieswindow.h  thumbnailerwindow.cpp
.github/actions/data/: settings.json
.github/actions/data/build_options/: ffmpeg_options
.github/workflows/: appimage.yml  flatpak.yml  linux.yml  linux_tests.yml  windows-msys2.yml  windows_tests.yml
AppImage/: AppRun
data/: io.github.mpc_qt.mpc-qt.metainfo.xml
packaging/nsis/: mpc-qt.nsi.in
scripts/: make-release-msys2.sh  make-win-icon.sh
src/: CMakeLists.txt  helpers.cpp  logger.cpp  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mpvwidget.cpp  settingswindow.cpp  settingswindow.ui
src/widgets/: drawnslider.cpp  drawnslider.h
widgets/: videopreview.cpp
